# lazyr

./: LICENSE  README.md  README.zh_CN.md  __init__.py  install.py  metadata.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
lazyr/: __init__.py  __version__.py  core.py
src/: __init__.py  __version__.py  core.py
src/lazyr/: __init__.py  _version.py  core.py
