[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyr"
version = "0.1.0"
dependencies = ["loggings"]
requires-python = ">=3.13"
authors = [
  {name = "Chitaoji", email = "2360742040@qq.com"},
]
maintainers = [
  {name = "Chitaoji", email = "2360742040@qq.com"}
]
description = "Creates lazily-imported modules in a more readable and safer way."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["config"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Documentation = "https://github.com/Chitaoji/lazyr/blob/main/README.md"
Repository = "https://github.com/Chitaoji/lazyr/"